--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.4.0
   window_manager: ^0.5.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
